<resources>
    <string name="app_name" translatable="false">TBA Quiz App</string>
    <string name="startButton">Start</string>
    <string name="signin_other_error" translatable="false">There was an issue with sign in. Please try again later.</string>
    <string name="app_id" translatable="false">1066857102717</string>
    <string name="fMsg">You can select another category by clicking in one of the buttons above.\nThanks for using me and check my RSS on the button below to stay informed about the app!"</string>
    <string name="sign_in_failed" translatable="false">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured" translatable="false">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed" translatable="false">License check failed.</string>
    <string name="unknown_error" translatable="false">Unknown error.</string>
    <string name="GT11a">Spain</string>
    <string-array name="selector_array">
        <item>Question</item>
        <item>General Feedback</item>
        <item>Bug</item>
        <item>Suggestion</item>
    </string-array>
    <string name="subMessage">Thank you for trying to make the app better. Please be so kind to select one of the following options</string>
    <string name="qTitle">Title of the Question</string>
    <string name="q1">Correct Answer(optional)</string>
    <string name="q2">Answer 2(optional)</string>
    <string name="q3">Answer 3(optional)</string>
    <string name="q4">Answer 4(optional)</string>
    <string name="gFeedback">What could we do better?</string>
    <string name="bugPlace">Where did you find the bug?</string>
    <string name="bugExpl">Could you explain briefly the bug?</string>
    <string name="sugg">Any suggestion is good.</string>
    <string name="qTErr">At least, you have to write the Title of the Question</string>
    <string name="gErr">At least, you have to write 1 character</string>
    <string name="bPErr">Please tell us where did you find the bug</string>
    <string name="bEErr">Please, explain the bug so that we can fix it</string>
    <string name="ThankY">Thank you very much for trying to make this app better</string>
    <string name="ETT15d">The Godfather doesn´t exist</string>
    <string name="ETT15">How many parts had The Godfather?</string>
    <string name="ETT21b">Destroy the Unique Ring</string>
    <string name="ETT22c">Gandalf the Grey</string>
    <string name="GT24a">Philipines Trench</string>
    <string name="GT24b">Tonga Trench</string>
    <string name="HT28">What was the name of the Great Captain?</string>
</resources>